Bug 619278 - :-moz-ui-invalid should apply as soon as the user tries to submit the form. r=sicking a=jst